# SpaceInvaders

./: CMakeLists.txt  PG.sln  shaders_uniforms_callbacks.cpp  space_invaders.cpp  testvaders.cpp
Debug/: space_invaders.ilk
common/include/glad/: glad.h
common/include/learnopengl/: entry.h  filesystem.h  root_directory.h
envaders/: gl_utils.cpp  main.cpp  space_invaders.vcxproj
envaders/Debug/: vc141.idb
envaders/Debug/space_invaders.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  space_invaders.lastbuildstate
shaders/: fs.glsl  vs_uniform.glsl  vs_uniform_move_in_x.glsl
utils/: CMakeLists.txt
